--- a/styles/components/card/card.css
+++ b/styles/components/card/card.css
@@ -1,35 +1,24 @@
 ﻿@media (hover:hover) {
     .card {
-        transition: all 0.3s;
-        background: url(./897f6845724e4711b48b8d91a599db1d.jpg);
-        background-size: cover;
-        background-position: center;
-        width: 350px;
+        border-radius: 0 20px;
         height: 300px;
         border-radius: 0 20px;
-    }
-
-    .card__blackout {
         background: linear-gradient(135deg, rgb(51, 74, 246), rgb(86, 181, 184));
-        border-radius: 0 20px;
-        width: 100%;
-        height: 300px;
         transition: all 0.3s;
+        display: flex;
+        flex-direction: column;
+        padding: 30px;
     }
 
-    .card__blackout:hover {
+    .card:hover {
         opacity: 0.9;
     }
 
-    .card__inner {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        padding: 30px;
-        height: 100%;
+    .card:hover {
+        opacity: 0.9;
     }
 
-    .card__inner:hover>.card__text {
+    .card:hover>.card__text {
         max-height: 100px;
     }
 
@@ -45,6 +34,7 @@
 
 .card__img {
     width: 50px;
+    margin-bottom: auto;
 }
 
 
@@ -67,7 +57,7 @@
     }
 
 
-    .card__inner {
+    .card {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
