--- a/styles/components/card/card.css
+++ b/styles/components/card/card.css
@@ -1,9 +1,9 @@
 ﻿@media (hover:hover) {
     .card {
         border-radius: 0 20px;
-        height: 300px;
+        height: 100%;
         border-radius: 0 20px;
-        background: linear-gradient(135deg, rgb(51, 74, 246), rgb(86, 181, 184));
+        background: linear-gradient(135deg, rgb(51, 74, 246), rgb(151, 151, 218));
         transition: all 0.3s;
         display: flex;
         flex-direction: column;
