--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 ﻿@import url(./components/header/header.css);
 @import url(./components/square.css);
 @import url(./components/button.css);
-@import url(./components/gradient-line.css);
 @import url(./components/card/card.css);
 @import url(./components/square_dark.css);
 
@@ -48,8 +47,10 @@ h2 {
 }
 
 .cards-section {
-    margin: 0 70px;
-    width: calc(100% - 140px);
+    display: flex;
+    justify-content: center;
+    margin: 0 30px;
+    width: calc(100% - 60px);
 }
 
 /* header */
@@ -343,6 +344,7 @@ h2 {
 
 
 .black-part-section-2__inner {
+    width: 100%;
     display: grid;
     gap: 10px;
     grid-template-areas:
@@ -369,13 +371,14 @@ h2 {
     grid-area: button;
     justify-self: right;
     align-self: center;
-    margin: 15px 30px 30px;
+    margin: 15px 5px 30px;
 }
 
+.white-part-section-3__card-wrapper,
 .black-part-section-2__card-wrapper {
     justify-self: center;
-    width: 350px;
-    height: 300px;
+    width: 450px;
+    height: 400px;
     border-radius: 0 20px;
     background: url(../images/card_back.webp);
     background-position: center;
@@ -397,13 +400,46 @@ h2 {
     grid-area: card4;
 }
 
-/* media */
+.card1 {
+    background: linear-gradient(135deg, rgba(25, 36, 116, 1), rgba(46, 54, 126, 1));
+}
 
-@media (max-width:1710px) {
+.card2 {
+    background: linear-gradient(135deg, rgba(46, 54, 126, 1), rgba(66, 72, 136, 1));
+}
+
+.card3 {
+    background: linear-gradient(135deg, rgba(66, 72, 136, 1), rgba(87, 90, 147, 1));
+}
+
+.card4 {
+    background: linear-gradient(135deg, rgba(87, 90, 147, 1), rgba(107, 107, 157, 1));
+}
+
+/* media */
+@media (max-width:1880px) {
+
+    .white-part-section-3__inner,
+    .black-part-section-2__inner {
+        width: 1482px;
+    }
 
     .white-part-section-3__card-wrapper,
     .black-part-section-2__card-wrapper {
-        width: 250px;
+        width: 363px;
+    }
+}
+
+@media (max-width:1542px) {
+
+    .white-part-section-3__inner,
+    .black-part-section-2__inner {
+        width: 1210px;
+    }
+
+    .white-part-section-3__card-wrapper,
+    .black-part-section-2__card-wrapper {
+        width: 295px;
     }
 }
 
@@ -420,7 +456,6 @@ h2 {
         --font-size-text: 18px;
     }
 
-    .cards-section,
     .inner {
         margin: 0 30px;
         width: calc(100% - 60px);
@@ -428,17 +463,19 @@ h2 {
 
     .black-part-section-2__inner,
     .white-part-section-3__inner {
+        width: 938px;
         grid-template-areas:
             'small-header small-header small-header small-header'
             'h2 h2 h2 h2'
-            'text text text button'
+            'text text button button'
             'card1 card2 card3 card4';
     }
 
     .white-part-section-3__card-wrapper,
     .black-part-section-2__card-wrapper {
-        width: 200px;
+        width: 227px;
     }
+
 }
 
 @media (max-width:960px) {
@@ -470,6 +507,7 @@ h2 {
 
     .black-part-section-2__inner,
     .white-part-section-3__inner {
+        width: 730px;
         grid-template-areas:
             'small-header small-header small-header small-header'
             'h2 h2 h2 h2'
@@ -489,7 +527,6 @@ h2 {
 
     .white-part-section-4__indentation {
         height: 150px;
-        width: 100%;
     }
 
     .black-part-section-2__inner,
@@ -508,7 +545,8 @@ h2 {
 
     .white-part-section-3__card-wrapper,
     .black-part-section-2__card-wrapper {
-        width: 300px;
+        width: 100%;
+        height: 350px;
     }
 
     .black-part-section-2__button-wrapper,
@@ -522,6 +560,9 @@ h2 {
 
 /* modifiers */
 
+.small-header {
+    font-size: var(--font-size-text);
+}
 
 .text_white {
     color: whitesmoke;
