--- a/styles/components/header/menu-burger/menu-burger.css
+++ b/styles/components/header/menu-burger/menu-burger.css
@@ -8,7 +8,7 @@
         position: absolute;
         top: -1000px;
         left: -30px;
-        background-image: linear-gradient(135deg, rgb(51, 74, 246), rgb(86, 181, 184));
+        background-image: linear-gradient(135deg, rgb(51, 74, 246), var(--color-text-purple));
         width: 100vw;
         height: 100vh;
         overflow: scroll;
@@ -38,6 +38,12 @@
 @media (max-width:1280px) {
     .menu__list {
         gap: 30px;
+    }
+}
+
+@media (max-width: 767px) {
+    .menu {
+        left: -15px;
     }
 }
 
