--- a/styles/components/check-mark.css
+++ b/styles/components/check-mark.css
@@ -1,28 +1,37 @@
 ﻿.check-mark {
-    width: 20px;
-    height: 40px;
     transition: all 0.5s;
+    position: relative;
+    transform: rotate(90deg);
+    width: 40px;
+    height: 40px;
 }
 
-.check-mark__down,
-.check-mark__up {
+.check-mark__line {
+    position: absolute;
+    top: 20px;
+    left: 16px;
+}
+
+.check-mark__line::after,
+.check-mark__line::before {
+    content: '';
     display: inline-block;
     background-color: var(--color-text-yellow);
-    width: 20px;
+    width: 15px;
     height: 2px;
+    position: absolute;
 }
 
 
-.check-mark__up {
+.check-mark__line::before {
+    transform: rotate(-45deg);
+    left: -10px;
+}
+
+.check-mark__line::after {
     transform: rotate(45deg);
 }
 
-.check-mark__down {
-    transform: rotate(-45deg);
-    position: relative;
-    top: -6px;
-}
-
 .check-mark_active {
-    transform: rotate(90deg);
+    transform: rotate(180deg);
 }
